--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,38 @@
   color: white;
 }
 
+body {
+  margin: 0;
+  font-family: Verdana, Geneva, sans-serif;
+}
+
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.header a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+@media screen and (max-width: 500px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+
+  .header-right {
+    float: none;
+  }
+}
+
 .App-link {
   color: #61dafb;
 }
