--- a/src/styles/mydeckslist.module.css
+++ b/src/styles/mydeckslist.module.css
@@ -16,7 +16,7 @@
 
 .header {
   display: grid;
-  grid-template-columns: 100px 100px 8fr 2fr;
+  grid-template-columns: 110px 110px 8fr 2fr;
   grid-gap: 30px;
   justify-items: center;
   align-items: center;
@@ -25,9 +25,14 @@
   padding: 20px 20px 0 20px;
 }
 
-.toggle span {
-  width: 40px;
+.toggle {
   border: 1px solid black;
+  height: 40px;
+}
+
+.toggle svg {
+  display: inline-block;
+  width: 30px;
   padding: 5px;
 }
 
